[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mobros"
version = "2.1.0.14"
authors = [
    {name = "DevOps team", email = "bacdevopskend@mov.ai"},
]
description = "Movai Object Builder for Ros, The framework to build, raise and package ros and ros movai packages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "boto3",
    "ruamel.yaml",
    "pydpkg",
    "rosdep",
    "setuptools==45.0",
    "pyopenssl==23.0.0",
    "anytree",
    "termcolor",
    "urllib3==1.*"
]

[project.urls]
Repository = "https://github.com/MOV-AI/movai-ros-build-system"

[project.scripts]
mobros = "mobros.handler:handle"

[tool.setuptools.packages.find]
include = ["mobros*"]
exclude = ["mobros.tests*"]

[tool.black]
line-length = 100

[tool.bumpversion]
current_version = "2.1.0.14"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)?(\\.(?P<build>\\d+))?"
serialize = ["{major}.{minor}.{patch}.{build}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
regex = true

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = '# vTBD'
serialize = ["{major}.{minor}.{patch}"]
replace = "# v{new_version}"
regex = true
ignore_missing_version = true
