<?xml version="1.0"?>
<package format="2">
  <name>package_a</name>
  <version>0.0.1</version>
  <description>The a package</description>
  <maintainer email="my_test@mov.ai">Duarte Coelho</maintainer>
  <author>Duarte Coelho</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>sick_scan</exec_depend>
  <build_depend version_lte="1.5.2-6" version_gte="0.0.1-23">ompl</build_depend>

  <export>
    <build_version>1</build_version>
  </export>
</package>
